# entangled-pdf

./: .gitignore  AGENTS.md  LICENSE  README.md  TEST_INFRASTRUCTURE.md  USER_MANUAL.md  VimTeX-integration.lua  architecture.md  example.tex  html_pdf_server.py  install.sh  intro.md  main.py  package-lock.json  package.json  pdf_server.html  pdf_server.py  playwright.config.ts  pyproject.toml  requirements.txt  tsconfig.json  vitest.config.js
agent_docs/: TODO.md  VPS_TEST_WALKTHROUGH.md  e2e-pdf-loading-issue.md  frontend-framework-analysis.md  intended-users-and-use-cases.md
certs/: test-key.pem  test.pem
completions/: entangle-pdf.bash  pdf-server.bash  sync-remote-pdf.bash
docs/: VPS_TEST_WALKTHROUGH.md  e2e-infrastructure-issue.md  frontend-framework-analysis.md
entangledpdf/: __init__.py  certs.py  cli.py  config.py  connection_manager.py  logging_sanitizer.py  sync.py  websocket_monitor.py
examples/: example.aux  example.fdb_latexmk  example.fls  example.tex  test-pdf2.tex
pdfserver/: __init__.py  certs.py  cli.py  config.py  connection_manager.py  state.py  sync.py
scripts/: entangle-pdf-test-cleanup
src/: certs.py  config.py  connection_manager.py  logging_sanitizer.py  state.py  websocket_monitor.py
static/: client-logger.ts  connection-status-ui.ts  constants.ts  coordinate-utils.ts  input-handler.ts  keyboard-handler.ts  long-press-handler.ts  marker-manager.ts  notification-manager.ts  pdf-lifecycle.ts  pdf-renderer.ts  scroll-manager.ts  state-manager.ts  synctex-controller.ts  token_form.html  tooltip-manager.ts  types.ts  viewer-utils.d.ts  viewer-utils.d.ts.map  viewer-utils.js  viewer-utils.js.map  viewer-utils.ts  viewer.d.ts  viewer.d.ts.map  viewer.html  viewer.js  viewer.js.map  viewer.ts  websocket-manager.ts
tests/: __init__.py  conftest.py  test_auth.py  test_certs.py  test_cli_generate_api_key.py  test_cli_integration.py  test_cli_start.py  test_cli_status.py  test_config.py  test_connection_manager.py  test_generate_api_key.py  test_html_contract.py  test_inverse_search.py  (+18 more)
(+90 files in other folders)
