[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entangledpdf"
version = "1.0.0"
description = "FastAPI-based PDF server with real-time sync and SyncTeX integration for LaTeX workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pdf", "latex", "synctex", "viewer", "server", "fastapi", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    "Programming Language :: TypeScript",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "cryptography>=41.0.0",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
entangle-pdf = "entangledpdf.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pdfserver"
Repository = "https://github.com/yourusername/pdfserver"
Issues = "https://github.com/yourusername/pdfserver/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["entangledpdf*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.js", "*.css", "*.ico", "*.json"]
